--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/js-cookie": "^3.0.6",
     "framer-motion": "^12.5.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
