--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noImplicitAny": false,
+    "removeComments": true,
     "jsx": "preserve",
     "incremental": true,
     "plugins": [
